use the java http client